# Architrave3D-2DToolkit

./: .gitattributes  .gitignore  Cargo.toml
crates/toolkit_ai_bridge/: Cargo.toml
crates/toolkit_ai_bridge/src/: error.rs  lib.rs  provider.rs  registry.rs
crates/toolkit_ai_bridge/src/adapters/: geometry_adapter.rs  graph_adapter.rs  input_adapter.rs  mod.rs  render_adapter.rs  scene_adapter.rs  simulation_adapter.rs  state_adapter.rs  ui_adapter.rs
crates/toolkit_ai_bridge/src/mcp/: protocol.rs  server.rs
crates/toolkit_anim/: Cargo.toml
crates/toolkit_anim/src/: lib.rs  player.rs  track.rs  transform_anim.rs
crates/toolkit_assets/: Cargo.toml
crates/toolkit_assets/src/: error.rs  gltf_io.rs  lib.rs  obj.rs  scene_import.rs
crates/toolkit_attributes/: Cargo.toml
crates/toolkit_attributes/src/: lib.rs  set.rs  store.rs  types.rs
crates/toolkit_brush/: Cargo.toml
crates/toolkit_brush/src/: brush.rs  falloff.rs  lib.rs  splat.rs
crates/toolkit_canvas/: Cargo.toml
crates/toolkit_canvas/src/: grid.rs  lib.rs  select.rs  view.rs
crates/toolkit_color/: Cargo.toml
crates/toolkit_color/src/: gradient.rs  hsv.rs  lib.rs  oklab.rs  palette.rs
crates/toolkit_convex/: Cargo.toml
crates/toolkit_convex/src/: gjk.rs  hull.rs  lib.rs
crates/toolkit_core/: Cargo.toml
crates/toolkit_core/src/: color.rs  commands.rs  dispatcher.rs  error.rs  events.rs  id.rs  lib.rs  tile_map.rs
crates/toolkit_curves/: Cargo.toml
crates/toolkit_curves/src/: bezier.rs  bspline.rs  catmull_rom.rs  knot.rs  lib.rs  nurbs.rs  surface.rs
crates/toolkit_easing/: Cargo.toml
crates/toolkit_easing/src/: easing.rs  lib.rs  tween.rs
crates/toolkit_field/: Cargo.toml
crates/toolkit_field/src/: combinators.rs  cross_field.rs  field.rs  lib.rs
crates/toolkit_geometry/: Cargo.toml
crates/toolkit_geometry/src/: bvh.rs  lib.rs  mesh.rs  ray.rs  rect2d.rs  vertex.rs
crates/toolkit_gizmo/: Cargo.toml
crates/toolkit_gizmo/src/: gizmo.rs  lib.rs  math.rs
crates/toolkit_graph/: Cargo.toml
crates/toolkit_graph/src/: dag.rs  evaluation.rs  lib.rs  node.rs
crates/toolkit_image/: Cargo.toml
crates/toolkit_image/src/: buffer.rs  io.rs  lib.rs
crates/toolkit_input/: Cargo.toml
crates/toolkit_input/src/: lib.rs  stabilizer.rs  stroke.rs  telemetry.rs
crates/toolkit_intersect/: Cargo.toml
crates/toolkit_intersect/src/: closest.rs  frustum.rs  lib.rs  shapes.rs  tests_ops.rs
crates/toolkit_lsystem/: Cargo.toml
crates/toolkit_lsystem/src/: lib.rs  system.rs  turtle.rs
crates/toolkit_meshedit/: Cargo.toml
crates/toolkit_meshedit/src/: edit_mesh.rs  lib.rs  loopcut.rs  ops.rs
crates/toolkit_meshops/: Cargo.toml
crates/toolkit_meshops/src/: attributes.rs  decimate.rs  lib.rs  ops.rs  weld.rs
crates/toolkit_noise/: Cargo.toml
crates/toolkit_noise/src/: fractal.rs  lib.rs  perlin.rs  simplex.rs  worley.rs
crates/toolkit_polyline/: Cargo.toml
crates/toolkit_polyline/src/: lib.rs  offset.rs  ops.rs  point.rs
crates/toolkit_procedural/: Cargo.toml
crates/toolkit_procedural/src/: grid_pack.rs  lib.rs  raymarch_2d.rs
crates/toolkit_project/: Cargo.toml
crates/toolkit_project/src/: io.rs  lib.rs  project.rs
crates/toolkit_remesh/: Cargo.toml
crates/toolkit_remesh/src/: cluster.rs  decimate.rs  lib.rs  quadric.rs
crates/toolkit_render/: Cargo.toml
crates/toolkit_render/src/: camera.rs  context.rs  lib.rs  material.rs  navigation.rs  pipeline.rs  target.rs  texture.rs  texture_cache.rs  uniforms.rs
crates/toolkit_rng/: Cargo.toml
crates/toolkit_rng/src/: lib.rs  rng.rs  sampling.rs
crates/toolkit_scene/: Cargo.toml
crates/toolkit_scene/src/: lib.rs  light.rs  node.rs  scene.rs  selection.rs  transform.rs
crates/toolkit_sdf/: Cargo.toml
crates/toolkit_sdf/src/: combinators.rs  lib.rs  primitives.rs  surface_nets.rs
crates/toolkit_select/: Cargo.toml
crates/toolkit_select/src/: adjacency.rs  lib.rs  selection.rs
crates/toolkit_simulation/: Cargo.toml
crates/toolkit_simulation/src/: erosion.rs  fluid.rs  grid.rs  lib.rs
crates/toolkit_skeleton/: Cargo.toml
crates/toolkit_skeleton/src/: lib.rs  pose.rs  skeleton.rs  skin.rs
crates/toolkit_solver/: Cargo.toml
crates/toolkit_solver/src/: iterative.rs  lib.rs  matrix.rs
crates/toolkit_spatial/: Cargo.toml
crates/toolkit_spatial/src/: grid.rs  kdtree.rs  lib.rs  octree.rs  poisson.rs
crates/toolkit_state/: Cargo.toml
crates/toolkit_state/src/: blend.rs  document.rs  history.rs  layer.rs  lib.rs
crates/toolkit_surfacing/: Cargo.toml
crates/toolkit_surfacing/src/: build.rs  lib.rs  ops.rs
crates/toolkit_text/: Cargo.toml
crates/toolkit_text/src/: atlas.rs  layout.rs  lib.rs  sdf.rs
crates/toolkit_texture_bake/: Cargo.toml
crates/toolkit_texture_bake/src/: bake.rs  lib.rs  rasterize.rs
crates/toolkit_topology/: Cargo.toml
crates/toolkit_topology/src/: edit.rs  halfedge.rs  lib.rs  selection.rs  subdivision.rs
crates/toolkit_triangulate/: Cargo.toml
crates/toolkit_triangulate/src/: delaunay.rs  earclip.rs  holes.rs  lib.rs
crates/toolkit_ui/: Cargo.toml
crates/toolkit_ui/src/: dock.rs  lib.rs  theme.rs  viewport.rs  widgets.rs
crates/toolkit_units/: Cargo.toml
crates/toolkit_units/src/: length.rs  lib.rs  system.rs
crates/toolkit_uv/: Cargo.toml
crates/toolkit_uv/src/: atlas.rs  chart.rs  lib.rs  lscm.rs  projection.rs  solver.rs
crates/toolkit_volume/: Cargo.toml
crates/toolkit_volume/src/: lib.rs  sample.rs  volume.rs
crates/toolkit_voxelize/: Cargo.toml
crates/toolkit_voxelize/src/: closest.rs  lib.rs  voxelize.rs
crates/toolkit_wfc/: Cargo.toml
crates/toolkit_wfc/src/: lib.rs  model.rs  solver.rs
docs/: 3d-pipeline.md  ai-bridge-guide.md  architecture.md  building-apps.md  creating-modules.md  futureImplmentation.md  implementation.md  module-reference.md
toolkitDocs/: ToolkitArchitectureGuide.md  ToolkitCoreModules.md  ToolkitDataFlow.md  ToolkitFeatureImplementationMatrix.md  ToolkitReferenceImplementations.md  ToolkitSetupGuide.md  ToolkitTechStack.md  ToolkitTestingPlan.md  ToolkitVision.md
