[workspace]
resolver = "2"
members = [
    "crates/toolkit_core",
    "crates/toolkit_input",
    "crates/toolkit_state",
    "crates/toolkit_render",
    "crates/toolkit_geometry",
    "crates/toolkit_graph",
    "crates/toolkit_simulation",
    "crates/toolkit_ui",
    "crates/toolkit_ai_bridge",
    "crates/toolkit_scene",
    "crates/toolkit_topology",
    "crates/toolkit_uv",
    "crates/toolkit_gizmo",
    "crates/toolkit_assets",
    "crates/toolkit_canvas",
    "crates/toolkit_easing",
    "crates/toolkit_rng",
    "crates/toolkit_noise",
    "crates/toolkit_curves",
    "crates/toolkit_meshops",
    "crates/toolkit_spatial",
    "crates/toolkit_sdf",
    "crates/toolkit_anim",
    "crates/toolkit_units",
    "crates/toolkit_color",
    "crates/toolkit_intersect",
    "crates/toolkit_image",
    "crates/toolkit_project",
    "crates/toolkit_skeleton",
    "crates/toolkit_texture_bake",
    "crates/toolkit_convex",
    "crates/toolkit_text",
    "crates/toolkit_lsystem",
    "crates/toolkit_wfc",
    "crates/toolkit_attributes",
    "crates/toolkit_volume",
    "crates/toolkit_field",
    "crates/toolkit_solver",
    "crates/toolkit_brush",
    "crates/toolkit_meshedit",
    "crates/toolkit_select",
    "crates/toolkit_polyline",
    "crates/toolkit_triangulate",
    "crates/toolkit_surfacing",
    "crates/toolkit_voxelize",
    "crates/toolkit_remesh",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
# Math
glam = { version = "0.29", features = ["serde"] }

# GPU
wgpu = "24.0"
encase = { version = "0.10", features = ["glam"] }
bytemuck = { version = "1.20", features = ["derive"] }
pollster = "0.4"

# UI
egui = "0.31"
winit = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Channels & Async
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Graph
petgraph = "0.6"

# Asset I/O
gltf = "1.4"

# Color
palette = "0.7"

# Image I/O
png = "0.18"

# Logging
log = "0.4"

# Testing
proptest = "1.5"

# Internal crates
toolkit_core = { path = "crates/toolkit_core" }
toolkit_input = { path = "crates/toolkit_input" }
toolkit_state = { path = "crates/toolkit_state" }
toolkit_render = { path = "crates/toolkit_render" }
toolkit_geometry = { path = "crates/toolkit_geometry" }
toolkit_graph = { path = "crates/toolkit_graph" }
toolkit_simulation = { path = "crates/toolkit_simulation" }
toolkit_ui = { path = "crates/toolkit_ui" }
toolkit_ai_bridge = { path = "crates/toolkit_ai_bridge" }
toolkit_scene = { path = "crates/toolkit_scene" }
toolkit_topology = { path = "crates/toolkit_topology" }
toolkit_uv = { path = "crates/toolkit_uv" }
toolkit_gizmo = { path = "crates/toolkit_gizmo" }
toolkit_assets = { path = "crates/toolkit_assets" }
toolkit_canvas = { path = "crates/toolkit_canvas" }
toolkit_easing = { path = "crates/toolkit_easing" }
toolkit_rng = { path = "crates/toolkit_rng" }
toolkit_noise = { path = "crates/toolkit_noise" }
toolkit_curves = { path = "crates/toolkit_curves" }
toolkit_meshops = { path = "crates/toolkit_meshops" }
toolkit_spatial = { path = "crates/toolkit_spatial" }
toolkit_sdf = { path = "crates/toolkit_sdf" }
toolkit_anim = { path = "crates/toolkit_anim" }
toolkit_units = { path = "crates/toolkit_units" }
toolkit_color = { path = "crates/toolkit_color" }
toolkit_intersect = { path = "crates/toolkit_intersect" }
toolkit_image = { path = "crates/toolkit_image" }
toolkit_project = { path = "crates/toolkit_project" }
toolkit_skeleton = { path = "crates/toolkit_skeleton" }
toolkit_texture_bake = { path = "crates/toolkit_texture_bake" }
toolkit_convex = { path = "crates/toolkit_convex" }
toolkit_text = { path = "crates/toolkit_text" }
toolkit_wfc = { path = "crates/toolkit_wfc" }
toolkit_lsystem = { path = "crates/toolkit_lsystem" }
toolkit_attributes = { path = "crates/toolkit_attributes" }
toolkit_volume = { path = "crates/toolkit_volume" }
toolkit_field = { path = "crates/toolkit_field" }
toolkit_solver = { path = "crates/toolkit_solver" }
toolkit_brush = { path = "crates/toolkit_brush" }
toolkit_meshedit = { path = "crates/toolkit_meshedit" }
toolkit_select = { path = "crates/toolkit_select" }
toolkit_polyline = { path = "crates/toolkit_polyline" }
toolkit_triangulate = { path = "crates/toolkit_triangulate" }
toolkit_surfacing = { path = "crates/toolkit_surfacing" }
toolkit_voxelize = { path = "crates/toolkit_voxelize" }
toolkit_remesh = { path = "crates/toolkit_remesh" }
