[package]
name = "toolkit_anim"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Keyframe tracks, transform animation, and a player that drives scene transforms"

[dependencies]
toolkit_scene = { workspace = true }
toolkit_easing = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
