[package]
name = "toolkit_attributes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Named, typed attribute channels bound to geometry domains (the procedural attribute backbone)"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
