[package]
name = "toolkit_brush"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Brush falloff and stroke-stamping engine shared by sculpting, mesh painting, and terrain tools"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
toolkit_geometry = { workspace = true }
toolkit_image = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
