[package]
name = "toolkit_canvas"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "2D editor foundation: pan/zoom view transform, adaptive grid, rubber-band selection"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
