[package]
name = "toolkit_color"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HSV/OKLab color spaces, gradients, palettes, and ramps over core's LinearRgba"

[dependencies]
toolkit_core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
