[package]
name = "toolkit_core"
description = "Shared types, traits, and event definitions for the 3D Rust Toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
