[package]
name = "toolkit_curves"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parametric curves and surfaces: Bezier, B-spline, NURBS, Catmull-Rom"

[dependencies]
toolkit_core = { workspace = true }
toolkit_geometry = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
