[package]
name = "toolkit_field"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A thin sample-at-point Field trait with composable combinators (the glue over noise/SDF/volume/image)"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
toolkit_geometry = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
