[package]
name = "toolkit_input"
description = "High-frequency input telemetry and stroke stabilization for the 3D Rust Toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolkit_core = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
