[package]
name = "toolkit_meshops"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Mesh utilities: weld, normals/tangents, flip, merge, smooth, decimate, stats"

[dependencies]
toolkit_core = { workspace = true }
toolkit_geometry = { workspace = true }
glam = { workspace = true }
