[package]
name = "toolkit_scene"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Scene graph: transform hierarchy, nodes, lights, and selection sets"

[dependencies]
toolkit_core = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
