[package]
name = "toolkit_sdf"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Signed distance fields: primitives, CSG combinators, and surface-nets meshing"

[dependencies]
toolkit_core = { workspace = true }
toolkit_geometry = { workspace = true }
glam = { workspace = true }
